renew work.html

--- a/work.html
+++ b/work.html
@@ -34,6 +34,7 @@
 <!-- メインカラム -->
 <div class="mainColumn">
         <div class="mainColumnTop">
+            <div class="topProfileItem">
             <h1 class="titlefont">制作物デモ</h1>
 
             <p>
@@ -54,7 +55,7 @@
                 ▽動画デモはこちら(音楽が流れます)
             </p>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width=20% src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
             <div>&emsp;</div>
@@ -158,10 +159,8 @@
 
         <div>&emsp;</div>
 
-
-        <div class="topBody">
-
         </div>
+
 </div>
 
 
