--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
                 ▽動画デモはこちら(音楽が流れます)
             </p>
 
-                <iframe width=20% height=20% src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width=50% height=50% src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
             <div>&emsp;</div>
@@ -131,7 +131,7 @@
             <h3 class="titlefont">▲一般の人にも使える？</h3>
         </p>
         <p>
-            2023.4.現在、一般の方向けのGUI祖父よは提供しておりません。<br>
+            2023.4.現在、一般の方向けのGUIは提供しておりません。<br>
             コードは
 
             <a href="https://github.com/kentaro-nakanishi/Matrix_Project">
