--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
                 <h3 class="titlefont">▲これは何？</h3>
             </p>
             <p>
-                Matrix Projectは、中西健太朗個人によって開発されている自動作曲のためのソフトウェアです。
+                Matrix Projectは、中西健太朗個人によって<br>開発されている自動作曲のためのソフトウェアです。
             </p>
 
             <div>&emsp;</div>
