--- a/index.html
+++ b/index.html
@@ -8,45 +8,46 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sidebar.css">
 
-    <link rel="stylesheet" href="css/top.css">
+    <link rel="stylesheet" href="css/top.css">
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 
 <body>
 
-    <!-- サイドバー -->
-<div class="sidebar">
-     <ul>
-           <li class="sideLink sideLinkTop">
-                 <a href="./index.html">トップ</a>
-             </li>
-             <li class="sideLink sideLinkMovie">
-                 <a href="./profile.html">プロフィール</a>
-             </li>
-             <li class="sideLink sideLinkDrama">
-                 <a href="./history.html">お仕事・実績等</a>
-             </li>
-             <li class="sideLink sideLinkWork">
-                   <a href="./work.html">制作物デモ</a>
-               </li>
+       <!-- サイドバー -->
+    <div class="sidebar">
+         <ul>
+               <li class="sideLink sideLinkTop">
+                       <a href="./index.html">トップ</a>
+                   </li>
+                   <li class="sideLink sideLinkMovie">
+                       <a href="./profile.html">プロフィール</a>
+                   </li>
+                   <li class="sideLink sideLinkDrama">
+                       <a href="./history.html">お仕事・実績等</a>
+                   </li>
+                   <li class="sideLink sideLinkWork">
+                         <a href="./work.html">制作物デモ</a>
+                     </li>
 
-     </ul>
- </div>
-
+         </ul>
+     </div>
 
 <!-- メインカラム -->
 <div class="mainColumn">
-     <div class="mainColumnTop">
-         <h1 class="titlefont">中西 健太朗のポートフォリオ</h1>
+       <div class="mainColumnTop">
+           <h1 class="titlefont">プロフィール</h1>
 
-         <div class="topBody">
-             <!-- 左エリア -->
-             <div class="topBodyLeft">
-                 <img class="topProfileImg" src="./index_files/music_note.svg" />
+           <div class="topBody">
+               <!-- 左エリア -->
+               <div class="topBodyLeft">
+                   <img class="profileProfileImg" src="./index_files/photo.jpg" />
 
-             </div>
-         </div>
-     </div>
- </div>
+
+               </div>
+           </div>
+       </div>
+   </div>
 
 
 </body>
