--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
                 ▽動画デモはこちら(音楽が流れます)
             </p>
 
-                <iframe width="300" height="200" src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width=20% height=12% src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
             <div>&emsp;</div>
@@ -79,7 +79,7 @@
                 <h3 class="titlefont">▲これは何？</h3>
             </p>
             <p>
-                Matrix Projectは、中西健太朗個人によって<br>開発されている自動作曲のためのソフトウェアです。
+                Matrix Projectは、中西健太朗個人によって開発されている自動作曲のためのソフトウェアです。
             </p>
 
             <div>&emsp;</div>
