--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            <div class="topBody">
                <!-- 左エリア -->
                <div class="topBodyLeft">
-                   <img class="profileProfileImg" src="./index_files/photo.jpg" />
+                   <img class="profileProfileImg" src="./index_files/music_note.svg" />
 
 
                </div>
