--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
                 ▽動画デモはこちら(音楽が流れます)
             </p>
 
-                <iframe width=20% height=12% src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width=40% height="200" src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
             <div>&emsp;</div>
@@ -118,7 +118,7 @@
         生成された音楽をコンピュータ上で再生して聴いて楽しむことはもちろん、<br>
         人間によるオーケストラや室内楽などの音楽のための作曲支援に用いることができます。<br>
 
-        <img class="profileProfileImg" src="./index_files/gakuhu_sakusei.png" width="650"/>
+        <img style= width:40%; src="./index_files/gakuhu_sakusei.png" width="650"/>
         <br>
         <span style="transform: skewX(-20deg); color: #354151; display: inline-block;">
             ▲Matrix Projectを用いた音楽制作
