--- a/work.html
+++ b/work.html
@@ -118,7 +118,7 @@
         生成された音楽をコンピュータ上で再生して聴いて楽しむことはもちろん、<br>
         人間によるオーケストラや室内楽などの音楽のための作曲支援に用いることができます。<br>
 
-        <img style= width:40%; src="./index_files/gakuhu_sakusei.png" width="650"/>
+        <img src="./index_files/gakuhu_sakusei.png" width="280"/>
         <br>
         <span style="transform: skewX(-20deg); color: #354151; display: inline-block;">
             ▲Matrix Projectを用いた音楽制作
