--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- メインカラム -->
 <div class="mainColumn">
        <div class="mainColumnTop">
-           <h1 class="titlefont">中西 健太朗のポートフォリオ</h1>
+           <h1 class="titlefont">中西健太朗<br>のポートフォリオ</h1>
 
            <div class="topBody">
                <!-- 左エリア -->
