--- a/history.html
+++ b/history.html
@@ -36,7 +36,6 @@
         <div class="mainColumnTop">
             <h1 class="titlefont">お仕事・実績等</h1>
 
-            <div class="topInfoItem"></div>
             <h2 class="titlefont">受賞歴</h2>
             <hr>
             <table border>
@@ -95,6 +94,7 @@
 
 
 
+        <img class="topProfileImg2" src="./index_files/music_note.svg" />
 
 
 
