--- a/work.html
+++ b/work.html
@@ -34,7 +34,6 @@
 <!-- メインカラム -->
 <div class="mainColumn">
         <div class="mainColumnTop">
-            <div class="topProfileItem">
             <h1 class="titlefont">制作物デモ</h1>
 
             <p>
@@ -55,7 +54,7 @@
                 ▽動画デモはこちら(音楽が流れます)
             </p>
 
-                <iframe width=40% height="200" src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/Tphw-2R5Dvc?si=q6HyD7ETByyQI_JZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
             <div>&emsp;</div>
@@ -156,10 +155,6 @@
 
         </p>
 
-
-        <div>&emsp;</div>
-
-        </div>
 
 </div>
 
