--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>中西 健太朗のポートフォリオ</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sidebar.css">
 
     <link rel="stylesheet" href="css/top.css">
     <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/smartphone.css">
 </head>
 
 <body>
