--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>中西 健太朗のポートフォリオ</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1 / (viewport-width / device-width)">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sidebar.css">
 
