--- a/work.html
+++ b/work.html
@@ -142,7 +142,7 @@
             <h5>手順</h5>
             <ul>
                 <li>上のGitHubのリンクよりフォルダをローカルにクローンし、</li>
-                <li>require.txtに従って必要なライブラリ等をインストールして下さい。</li>
+                <li>requirements.txtに従って必要なライブラリ等をインストールして下さい。</li>
                 <li>main.pyを実行すると、音楽(MIDI楽譜データ)が生成されます。</li>
                 <li>config.pyより、詳細に音楽がコントロールできます。</li>
                 </ul>
