--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
                        <div>学士（東京藝術大学 作曲）</div>
                         <div></div>
                        <h4>音楽×情報技術 をテーマにした創造</h4>
-                        <div>クラシックの器楽による芸術音楽の作曲を<br>行いながら、コンピュータによる音楽環境<br>システムの個人開発に取り組んできました。</div>
+                        <div>クラシックの器楽による芸術音楽の作曲を行いながら、<br>コンピュータによる音楽環境システムの個人開発に取り組んできました。</div>
                    </div>
 
                </div>
