--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
                  <a href="./profile.html">プロフィール</a>
              </li>
              <li class="sideLink sideLinkDrama">
-                 <a href="./history.html">お仕事・実績等</a>
+                 <a href="./history.html">お仕事<br>・実績等</a>
              </li>
              <li class="sideLink sideLinkWork">
                    <a href="./work.html">制作物デモ</a>
