--- a/work.html
+++ b/work.html
@@ -144,7 +144,7 @@
                 <li>上のGitHubのリンクよりフォルダをローカルにクローンし、</li>
                 <li>requirements.txtに従って必要なライブラリ等をインストールして下さい。</li>
                 <li>main.pyを実行すると、音楽(MIDI楽譜データ)が生成されます。</li>
-                <li>config.pyより、詳細に音楽がコントロールできます。</li>
+                <li>tree_config.pyより、詳細に音楽がコントロールできます。</li>
                 </ul>
 
 
