--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
                        <a href="./profile.html">プロフィール</a>
                    </li>
                    <li class="sideLink sideLinkDrama">
-                       <a href="./history.html">お仕事<br>・実績等</a>
+                       <a href="./history.html">仕事<br>・実績等</a>
                    </li>
                    <li class="sideLink sideLinkWork">
                          <a href="./work.html">制作物デモ</a>
