--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
 <!-- メインカラム -->
 <div class="mainColumn">
         <div class="mainColumnTop">
-            <h1 class="titlefont">お仕事・実績等</h1>
+            <h1 class="titlefont">仕事・実績等</h1>
 
             <h2 class="titlefont">受賞歴</h2>
             <hr>
