--- a/history.html
+++ b/history.html
@@ -57,7 +57,7 @@
                 </tr>
             </table>
 
-            <h2 class="titlefont">関わったお仕事</h2>
+            <h2 class="titlefont">関わった仕事</h2>
             <hr>
 
             <table border>
