--- a/work.html
+++ b/work.html
@@ -148,7 +148,7 @@
                 </ul>
 
 
-        <span style="transform: skewX(-20deg); color: #354151; display: inline-block;">
+        <span style="font-style: italic; color: #354151; display: inline-block;">
             <div>技術者の方向け</div>
             <div>更に詳しい技術的な詳細を必要とする方は、riku5syou4☆gmail.com(☆→@)にご連絡下さい。<br>Matrix Projectのリファレンスをお送りします。</div>
         </span>
