--- a/work.html
+++ b/work.html
@@ -150,11 +150,32 @@
 
         <span style="font-style: italic; color: #354151; display: inline-block;">
             <div>技術者の方向け</div>
-            <div>更に詳しい技術的な詳細を必要とする方は、riku5syou4☆gmail.com(☆→@)にご連絡下さい。<br>Matrix Projectのリファレンスをお送りします。</div>
+  
+            </div>▼2023/06/07に作成した、コードの内容を第三者に説明するために用いたマニュアルをこちらに公開いたします。</div>
+            <div>▼コードの動作・処理の内容を更に詳しく知りたい方は、下のリンク先の資料をご覧ください。</div>
+ 
         </span>
 
         </p>
 
+            <p>
+                <div>
+                    ▽資料はこちら（その１）
+                </div>
+                <a href="https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd">
+                    https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd
+                </a>
+                 <div>
+                    ▽資料はこちら（その２）
+                </div>
+                 <a href="https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd">
+                    https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd
+                </a>
+                <div>
+                    (noteの限定公開ページにジャンプします)
+                </div>
+            </p>
+ 
 
 </div>
 
