--- a/work.html
+++ b/work.html
@@ -153,8 +153,6 @@
   
             </div>▼2023/06/07に作成した、コードの内容を第三者に説明するために用いたマニュアルをこちらに公開いたします。</div>
             <div>▼コードの動作・処理の内容を更に詳しく知りたい方は、下のリンク先の資料をご覧ください。</div>
- 
-        </span>
 
         </p>
 
@@ -175,8 +173,12 @@
                     (noteの限定公開ページにジャンプします)
                 </div>
             </p>
- 
+        
+        
+ <span>
 
+
+ 
 </div>
 
 
