--- a/work.html
+++ b/work.html
@@ -147,39 +147,44 @@
                 <li>tree_config.pyより、詳細に音楽がコントロールできます。</li>
                 </ul>
 
+    <div>&emsp;</div>
 
+
+        <small>
         <span style="font-style: italic; color: #354151; display: inline-block;">
             <div>技術者の方向け</div>
-  
-            </div>▼2023/06/07に作成した、コードの内容を第三者に説明するために用いたマニュアルをこちらに公開いたします。</div>
-            <div>▼コードの動作・処理の内容を更に詳しく知りたい方は、下のリンク先の資料をご覧ください。</div>
-        <span>
+            <div>&emsp;</div>
+            <div>2023/06/07に作成した、コードの内容を第三者に説明するために用いたマニュアルをこちらに公開いたします。</div>
+            <div>コードの動作・処理の内容を更に詳しく知りたい方は、下のリンク先の資料をご覧ください。</div>
 
- 
-        </p>
+            <div>&emsp;</div>
 
-            <p>
+        </span>
+
                 <div>
                     ▽資料はこちら（その１）
                 </div>
                 <a href="https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd">
-                    https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd
+                    Matrix Project　理論の基礎
                 </a>
-                 <div>
+                <div>
                     ▽資料はこちら（その２）
                 </div>
-                 <a href="https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd">
-                    https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd
+                <a href="https://note.com/preview/n797a0851819b?prev_access_key=6c03f3761c6f2b776a3a9941f18dfbbd">
+                    Matrix Project　実践の基礎
                 </a>
                 <div>
                     (noteの限定公開ページにジャンプします)
                 </div>
-            </p>
-        
-        
+
+        </small>
+
+        </p>
 
 
- 
+
+
+
 </div>
 
 
