--- a/work.html
+++ b/work.html
@@ -154,7 +154,7 @@
         <span style="font-style: italic; color: #354151; display: inline-block;">
             <div>技術者の方向け</div>
             <div>&emsp;</div>
-            <div>2023/06/07に作成した、コードの内容を第三者に説明するために用いたマニュアルをこちらに公開いたします。</div>
+            <div>2023/06/07に作成した、コードの内容を第三者に説明するために用いたマニュアルをこちらに共有いたします。</div>
             <div>コードの動作・処理の内容を更に詳しく知りたい方は、下のリンク先の資料をご覧ください。</div>
 
             <div>&emsp;</div>
