--- a/work.html
+++ b/work.html
@@ -149,7 +149,7 @@
 
     <div>&emsp;</div>
 
-        <hr>
+        <hr style="border: none;border-top: 1px dotted #999;">
         <small>
         <span style="font-style: italic; color: #354151; display: inline-block;">
             <div>技術者の方向け</div>
